2002-08-16  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Always look for known
	functions, even if immediate.

2002-08-10  Jim White  <jim@pagesmiths.com>

	* build.xml:  Patch to compile HTTP.scm.

2002-08-04  Per Bothner  <per@bothner.com>

	* kawa/standard/{string_ci_equal_p.java, string_ci_greaterequal_p.java,
	string_ci_greaterthan_p.java, string_ci_lessequal_p.java,
	string_ci_lessthan_p.java, string_greaterequal_p.java,
	string_greaterthan_p.java, string_lessequal_p.java,
	string_lessthan_p.java}:  Removed - noew use kawa.lib.strings.
	* kawa/standard/Makefile.am:  Update accordingly.
	* kawa/standard/vector_append.java (vectorAppend):  New static field.
	(<init>):  New constructor
	* kawa/standard/Scheme.java (initScheme):  Update accordingly.

2002-08-02  Per Bothner  <per@bothner.com>

	* kawa/standard/expt.java (expt):  New static methods.
	(expt)  New static final field.
	* kawa/standard/Scheme.java (initScheme):  Use define_field for "expt".

2002-07-29  Per Bothner  <per@bothner.com>

	* kawa/standard/prim_throw.java (primitiveThrow):  New static field.
	* kawa/standard/Scheme.java (initScheme):  Define "primitive-throw"
	using define_field, so it can be inlined.

2002-07-28  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (getNamedType):  Define <never-returns>.

2002-07-25  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair):  Remove some optimizations,
	and argument count checking.  They are now done in InlineCalls.

2002-07-24  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run):  Update for gnu.expr changes.
	* kawa/standard/load.java (loadSource):  Likewise.
	* kawa/lang/CompileFile.java:  Likewise.
	(read):  Return Compilation instead of ModuleExp.
	(compile_to_file):  Catch compile-time exceptions.
	* kawa/lang/Eval.java (evalBody):  Updates.
	* kawa/lang/Translator.java:  Update Parser -> Compilation.
	Replace current_line etc by Compilation's getLine etc methods.