@@ -1,3 +1,12 @@
+2002-08-22  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/Macro.java (expander):  Change type to Object.
+	(getExpander):  Remove unused method.
+	(expand):  Handle expander as evaluated Procedure, or
+	an re-written S-expression.  If latter, re-write it.
+	* kawa/standard/define_syntax.java (scanForDefinitions):  Set expander.
+	(rewrite):  Re-write expander if it has been re-written yet.
+
 2002-08-16  Per Bothner  <per@bothner.com>
 
 	* kawa/lang/Translator.java (rewrite):  Always look for known
